--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Images/Pat.png" alt="Patrick's Profile Image"></td>
+      <td><img src="images/Pat.png" alt="Patrick's Profile Image"></td>
       <td>
         <h1>Patrick Odhiambo</h1>
         <p> <em> CTO and Lead Trader <strong>Destiny Capital</strong> </em> </p>
