--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1>Patrick Odhiambo</h1>
         <p> <em> CTO and Lead Trader <strong>Destiny Capital</strong> </em> </p>
-        <p> I am the lead trader at Destiny Capital and also double as the chief technical officer. My experience in the difference financial markets span two decades where I have successfully traded <strong> <a
+        <p> I am the lead trader at Destiny Capital and also double as the chief technical officer. My experience in the different financial markets span two decades where I have successfully traded <strong> <a
               href="https://www.wiseradvisor.com/blog/financial-planning/6-important-financial-instruments-to-make-your-financial-plan-a-success/">different instruments</a> </strong>on the financial markets. Today, I
           also train and mentor new traders as well as publish trade analysis on various sites. </p>
       </td>
