--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <h3>My Hobbies</h3>
   <ol>
     <li>Reading</li>
-    <li><a href="https://www.tldevtech.com/watching-movies-as-a-hobby/">Watching Movies</a></li>
+    <li><a href="https://www.tldevtech.com/watching-movies-as-a-hobby/" target="_blank">Watching Movies</a></li>
     <li>Listening to Music</li>
   </ol>
   <hr>
